# House_Price_Prediction

./: DEPLOYMENT.md  README.md
Model-Training/: HousePricePrediction.ipynb  deployment_guide.md
housePrice_backend/: amenity_map.json  defaults.json  facing_map.json  location_map.json  main.py  model.pkl  pyproject.toml  requirements.txt  schemas.py  society_map.json
housePrice_backend/Routers/: predict.py
housePrice_frontend/: index.html  package-lock.json  package.json
housePrice_frontend/src/: App.css  App.jsx  index.css
